ported the backend to vercel for better performance

--- a/env.example
+++ b/env.example
@@ -9,4 +9,5 @@ PORT=3000
 NODE_ENV=production
 
 # CORS Configuration
-FRONTEND_URL=http://localhost:8083
+# Note: CORS is now configured to allow multiple origins in server.js
+# No need to set FRONTEND_URL - the server handles multiple allowed origins
